Hero section works perfectly on smaller screens --fixing for desktop size in progress

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ html, body {
 }
 body {
     background-color: rgb(255, 255, 255);
+    font-family: 'Montserrat', sans-serif;
 }
 /*
 font-family: 'Montserrat', sans-serif; 200 500
@@ -27,48 +28,95 @@ header{
 #menu li a{
     color: black;
     text-decoration: none;
+    font-size: 0.8em;
 }
 
 #hero-content{
-    margin: 50px 0 0 10px;
     position: absolute;
     z-index: 2;
-    max-width: 80vw;
-    min-width: 50vw;
-    max-height: 100vh;
+    width: 100vw;
+    height: 100vh;
+    display: grid
+}
+#hero-video{
+    width: 100vw;
+    height: 100vh;
+    justify-content: right;
+    display: flex;  
+}
+#hero-video video{
+    height: 100vh;
+    filter: blur(0px) contrast(100%) saturate(2);
+    z-index: 1;  
 }
 
 #hero-content h1{
-   font-family: 'Montserrat', sans-serif;
    font-weight: 700;
-   font-size: 5em;
+   font-size: 20vw;
    margin: 0;
+   align-self: end;
 }
-
 #hero-content p{
-    font-family: 'Montserrat', sans-serif;
+    font-size: 3vw;
+
+}
+#hero-content-container{
+    margin-left: 20px;
+    max-width: 50vw;
 }
 
-#hero-content button{
+#hero-content-container button{
     border: 1px solid rgb(226, 193, 187);
-    border-radius: 20px;
     background-color: rgb(255, 255, 255);
     color: rgb(109, 77, 72);
-    padding: 15px 32px;
+    padding: 10px 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin-bottom: 50px;
-}
-
-#hero-video video{
-    height: 100vh;
-    filter: blur(0px) contrast(100%) saturate(2);
-    z-index: 1;
+    min-width: 150px;
 }
 
 /* ----- MOBILE FIRST DESIGN -----*/
+/*GOOGLE NEST HUB */
+@media screen and (max-height: 800px) and (width: 1024px) {
+    #hero-content h1{
+        font-size: 5em !important;
+    }
+    #hero-content{
+        position: absolute;
+        margin-left: 18vw;
+        padding-top: 50px;
+    }
+    #hero-video{
+        width: 100vw;
+        height: 100vh;
+        justify-content: left;
+        display: flex;  
+    }
+    #hero-content-container p{
+        font-size: 0.9em;
+    }
+}
+/*GOOGLE NEST HUB MAX*/
+@media screen and (max-height: 800px) and (min-width: 1280px) {
+    #hero-content h1{
+        font-size: 7em !important;
+    }
+    #hero-content{
+        margin-left: 10vw;
+        margin-top: 5vw;
+    }
+    #hero-video{
+        justify-content: left;
+        display: flex;  
+    }
+    #hero-content-container p{
+        font-size: 0.9em;
+    }
+}
+
 /*SMALL DEVICES*/
 @media screen and (max-width: 280px) {
     #hero-content h1{
@@ -77,16 +125,18 @@ header{
 }
 /*SMALL DEVICES*/
 @media screen and (min-width: 768px) {
+
     #hero-content{
         max-width: 30vh;
     }
     #hero-content h1{
-        font-size: 8em;
+        /*font-size: 8em;*/
+        font-size: 21vw;
     }
 }
 
 /*DESKTOPS*/
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 912px) {
     #hero-outer{
         display: flex;
         flex-direction: row;
@@ -94,19 +144,38 @@ header{
     }
     #hero-content{
         position: relative;
-        left: 0%;
         min-width: 30vw;
         max-width: 30vh;
-        left: 50px;
+        left: 10vw;
     }
     #hero-content h1{
-        font-size: 9em;
+        font-size: 21vw;
+        padding-top: 20px;
     }
 }
 
 /*LARGE DESKTOPS*/
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1000px) {
+
     #hero-content h1{
-        font-size: 10em;
+        font-size: 210px;
+    }
+    #hero-content-container p{
+        font-size: 30px;
+        margin-top: 0;
+        margin-bottom: 10px;
+    }
+}
+
+/* XL LARGE DESKTOPS*/
+@media screen and (min-width: 1400px) {
+    #hero-outer{
+        
+    }
+    #hero-content{
+        margin-left: 10%;
+    }
+    #hero-video{
+        justify-content: left;
     }
 }
